--- a/blog/application/admin/view/article/edi.html
+++ b/blog/application/admin/view/article/edi.html
@@ -117,8 +117,9 @@
                             <label for="desc" class="col-sm-2 control-label no-padding-right">文章简介</label>
                             <div class="col-sm-6">
                                 <!-- <input class="form-control" id="desc" placeholder="" name="desc" required="" type="text"> -->
-                                <textarea class="form-control" name="desc" id="" cols="30" rows="3">{$vo.desc}</textarea>
-                            </div>
+								<script type="text/plain" id="content" name="content">{$vo.content}</script>
+<!--                                 <textarea class="form-control" name="desc" id="" cols="30" rows="3">{$vo.desc}</textarea>
+                                 -->                            </div>
                              <p class="help-block col-sm-4 red">* 必填</p>
                         </div>  
 
