--- a/blog/application/index/view/article/article.html
+++ b/blog/application/index/view/article/article.html
@@ -14,6 +14,11 @@
         <link rel="stylesheet" href="__STATIC__/shareandsidebar.css">
         <link rel="stylesheet" href="__STATIC__/bs/css/pagination.css">
         <script src="__STATIC__/bs/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="__STATIC__/admin/ueditor/third-party/SyntaxHighlighter/shCore.js"></script>
+        <link rel="stylesheet" href="__STATIC__/admin/ueditor/third-party/SyntaxHighlighter/shCoreDefault.css">
+        <script type="text/javascript">
+            SyntaxHighlighter.all();
+        </script>
     <style>
         /*返回顶部按钮样式*/
          .scrolltop{
