--- a/blog/application/index/view/index/index.html
+++ b/blog/application/index/view/index/index.html
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet" href="__STATIC__/bs/css/tooltip.css">
 <link rel="stylesheet" href="__STATIC__/shareandsidebar.css">
-<!-- <link rel="stylesheet" href="__STATIC__/bs/css/pagination.css"> -->
+ <link rel="stylesheet" href="__STATIC__/bs/css/pagination.css">
 <script src="__STATIC__/bs/js/bootstrap.min.js"></script>
 <!-- 引入bootstrap.css -->
 <!-- <link rel="stylesheet" href="__STATIC__/bs/css/bootstrap.min.css"> -->
